Change Notification Schema ObjectID representation to 24-Digit Hex
