# NotificationService/src/main/java/ru/red/notificationservice/controller/FetchController.java
@@ -1,12 +1,9 @@
 package ru.red.notificationservice.controller;
 
 import lombok.extern.log4j.Log4j2;
-import org.bson.types.ObjectId;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import reactor.core.publisher.Flux;
@@ -26,8 +23,8 @@ public class FetchController {
         this.service = service;
     }
 
-    @PostMapping("/id")
-    public Mono<Notification> fetchNotificationById(@RequestBody ObjectId id) {
+    @GetMapping("/id/{id}")
+    public Mono<Notification> fetchNotificationById(@PathVariable("id") String id) {
         return service.fetchNotificationById(id).as(this::validation);
     }
 
